# Crypto

./: .dockerignore  .gitignore  AGENTS.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Dockerfile  ERRORS.txt  Makefile  PHATTRIEN.txt  PROJECT_STATUS.txt  README.md  USAGE_GUIDE.txt  VM_ENHANCEMENT_SPEC.md  b.py  cmake_install.cmake  compile_commands.json  crypto  docker-compose.yml  plan.txt  prot1.py  prot_all.py  skills-lock.json  test_crypto  test_openssl  test_rx_prot.py  test_vm_xbr.py  test_vm_xbr_prot.py  test_xbr.py  unsupport_opcode.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
build_release/: crypto
include/crypto/: aes.h  chacha20.h  chacha20_poly1305.h  cipher.h  common.h  compress.h  compress_script.h  file_util.h  obfuscate.h  obfuscate_antidebug.h  obfuscate_flow.h  obfuscate_junk.h  obfuscate_rename.h  obfuscate_types.h  obfuscate_xorgen.h  pyobf.h  pyobf_core.py  stub.h  xchacha20_poly1305.h
include/vm/: vm.h  vm_interp_py.h  vm_program.h  vm_py.h  vm_runtime_source.py  vm_serialize.h  vm_split.h  vm_types.h
lib/snappy/: config.h  snappy-stubs-public.h
src/: main.cpp
src/cli/: cli.cpp  cli.h  cli_help.cpp  cli_help.h  cli_parse.cpp  cli_parse.h  protect.cpp  protect.cpp.bak  protect.cpp.full  protect.h  protect_internal.h  protect_keyobf.cpp  protect_pyrunner.cpp  protect_stub.cpp  protect_utils.cpp
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20_poly1305.cpp  cipher.cpp  cipher.h  xchacha20_poly1305.cpp
src/encode/: ascii85.cpp  ascii85.h  base32.cpp  base32.h  base64.cpp  base64.h  base85.cpp  base85.h  encoder.cpp  encoder.h  hexcode.cpp  hexcode.h  xor_basic.cpp  xor_basic.h  xor_prng.cpp  xor_prng.h  xor_protect.cpp  xor_protect.h  xorcode.cpp  xorcode.h
src/obfuscate/: anti_debug.cpp  anti_debug_basic.cpp  anti_debug_codegen.cpp  anti_debug_common.cpp  anti_debug_hooks.cpp  anti_debug_internal.h  flow_flatten.cpp  flow_flatten_adv.cpp  flow_flatten_adv_plan.cpp  flow_flatten_adv_plan.h  flow_flatten_opaque.cpp  flow_flatten_opaque.h  junk.cpp  junk_advanced.cpp  junk_advanced.h  junk_basic.cpp  obfuscate.cpp  rename.cpp  xor_gen.cpp  xor_gen_crypto.cpp  xor_gen_crypto.h
src/utils/: compress.cpp  compress_impl.h  compress_stdlib.cpp  compress_thirdparty.cpp  compress_thirdparty_impl.h  file_util.cpp
src/vm/: cfi.cpp  code_schedule.cpp  isa_expand.cpp  obfcond.cpp  smc.cpp  spill.cpp  vlencode.cpp  vlencode_deterministic.cpp  vlencode_polymorphic.cpp  vm_compile.cpp  vm_program.cpp  vm_serialize.cpp  vm_stub.cpp
tests/: README.md  b.py  test_all.cpp  test_integration.cpp  test_obfuscate.cpp  test_openssl.cpp  test_pyobf.py  test_security_regression.cpp  test_vm.cpp  test_vm_runtime_obfuscation.cpp
tests/manual/: b.py  hello.py  prot1.py  prot2.py  prot_all.py  simple_obf.py  simple_vm5.py  test_rx.py  test_rx_prot.py  test_xbr_prot.py
tools/: compress.py  generate_compress_h.py  generate_pyobf_h.py  generate_vm_interp_h.py  pyobf.py
